Add map and set codecs.