@@ -1,5 +1,7 @@
 package dev.argon.esexpr.generator.gen.tests;
 
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import dev.argon.esexpr.KeywordMapping;
 import dev.argon.esexpr.ESExpr;
 import dev.argon.esexpr.generator.gen.RepeatedArguments;
@@ -16,16 +18,16 @@ public class RepeatedArgumentsTest extends TestBase {
 			RepeatedArguments.codec(),
 			new ESExpr.Constructor(
 				"repeated-arguments",
-				List.of(new ESExpr.Str("A"), new ESExpr.Str("B"), new ESExpr.Str("Z")),
-				Map.of(
+				ImmutableList.of(new ESExpr.Str("A"), new ESExpr.Str("B"), new ESExpr.Str("Z")),
+				ImmutableMap.of(
 					"A", new ESExpr.Str("1"),
 					"B", new ESExpr.Str("2"),
 					"Z", new ESExpr.Str("3")
 				)
 			),
 			new RepeatedArguments(
-				List.of("A", "B", "Z"),
-				new KeywordMapping<>(Map.of(
+				ImmutableList.of("A", "B", "Z"),
+				new KeywordMapping<>(ImmutableMap.of(
 					"A", "1",
 					"B", "2",
 					"Z", "3"
